--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Brand-Less</title>
 </head>
 <body>
     
+    <header>
+         <div class="logo_wrapper">
+            <a href="#" class="logo">BRANDLESS</a>
+            <div class="toggle"></div>
+         </div>
+         <img src="Images/bg.jpg" alt="Background">
+         <div class="content">
+             <h2>Success By Design</h2>
+             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae esse natus quisquam, est sed animi suscipit amet. Expedita, ducimus doloribus Lorem ipsum dolor sit amet.</p>
+         </div>
+    </header>
+
 </body>
-</html>
+</html> 
