updated about section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae esse natus quisquam, est sed animi suscipit amet. Expedita, ducimus doloribus Lorem ipsum dolor sit amet.</p>
          </div>
     </header>
-
+    
+    <!-- About -->
+    <section class="about">
+        <div class="contentBx">
+            <h2 class="heading">About Us</h2>
+            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem eveniet repellat error perferendis, rerum quisquam ut reprehenderit earum beatae repudiandae at vel, odio dolorum vero incidunt architecto molestias maiores praesentium esse id? Commodi aliquam mollitia odio maiores possimus vitae iure unde, voluptates asperiores itaque nobis omnis atque eveniet officiis eos facere earum eum soluta rerum? Sapiente doloribus modi officia quae accusamus? Minus, odit corporis? Nisi in dolore eligendi omnis. Quaerat rerum accusantium laboriosam alias.? Minus, odit corporis? Nisi in dolore eligendi omnis. Quaerat rerum accusantium laboriosam alias<br><br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid nostrum nihil eius explicabo consectetur eos autem unde possimus dolor eaque, placeat quisquam quibusdam qui vitae quod vero consequuntur hic, illum, earum porro blanditiis reprehenderit! Soluta eum et quae ea impedit qui quod? Error quo quam nesciunt eveniet voluptates inventore sequi.</p>
+        </div>
+        <div class="imgBx"></div>
+    </section>
 </body>
 </html> 
