added services section

--- a/index.html
+++ b/index.html
@@ -29,5 +29,28 @@
         </div>
         <div class="imgBx"></div>
     </section>
+
+    <!-- services -->
+    <section class="services">
+        <h2 class="heading">Our Services</h2>
+        <p class="text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente incidunt ad iusto saepe molestias cupiditate reiciendis assumenda dolores repellendus, accusamus aperiam excepturi. Doloremque amet quo iure saepe dolore harum expedita tempore neque maxime hic facere, asperiores accusamus autem quisquam consequuntur maiores similique atque cupiditate assumenda voluptas facilis vitae. Placeat officiis vitae dolore eveniet repellendus, laudantium provident vero. Ipsum nam libero vitae velit dolor? Culpa, maiores. Veritatis sunt, natus ab, aliquid atque expedita saepe excepturi, obcaecati nihil tempora quisquam nulla provident.
+        </p>
+        <div class="container">
+            <div class="serviceBx">
+                <img src="./Images/icon1.png" alt="Design">
+                <h2>Design</h2>
+            </div>
+            
+            <div class="serviceBx">
+                <img src="./Images/icon2.png" alt="Development">
+                <h2>Development</h2>
+            </div>
+            <div class="serviceBx">
+                <img src="./Images/icon3.png" alt="Branding">
+                <h2>Branding</h2>
+            </div>
+        </div>
+    </section>
 </body>
 </html> 
