updated technology section

--- a/index.html
+++ b/index.html
@@ -52,5 +52,18 @@
             </div>
         </div>
     </section>
+
+    <!-- Technology -->
+    <section class="technology">
+        <div class="contentBx">
+            <h2 class="heading">We use cutting edge technology</h2>
+            <p class="text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium mollitia porro odit, perferendis at, sed asperiores eveniet eos dolore laboriosam doloribus autem. Ratione earum saepe neque. Tempore minima laudantium error, dolore totam incidunt voluptatibus libero culpa facilis inventore nihil consectetur fuga quo saepe officiis, placeat nisi laboriosam adipisci ab nesciunt!
+            </p>
+        </div>
+        <div class="imgBx">
+            <img src="./Images/tech.png" alt="">
+        </div>
+    </section>
 </body>
 </html> 
