added clients section

--- a/index.html
+++ b/index.html
@@ -65,5 +65,17 @@
             <img src="./Images/tech.png" alt="">
         </div>
     </section>
+
+    <!-- Client -->
+    <section class="client">
+        <h2 class="heading">Our clients</h2>
+        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam libero iusto sequi eum amet odio quis magnam aut doloribus! Laboriosam atque voluptates fugiat reiciendis fuga! Enim quia laudantium consectetur itaque inventore laboriosam! Veritatis praesentium quis, recusandae, nemo aut iure similique totam culpa, illum dolorem repellendus distinctio alias sed incidunt optio! Minima eius enim deserunt dolore, officiis eum doloremque veniam. Aliquid vitae sed, tenetur animi dolorem architecto soluta cumque provident laborum error voluptas corporis veritatis perspiciatis sunt excepturi quisquam dolor dolorum rerum voluptatum dignissimos quasi iure? Enim vitae quis exercitationem ipsum sunt officia aperiam quo ad dolor, amet necessitatibus ullam praesentium.</p>
+        <div class="imgBx">
+            <img src="./Images/brand1.png" alt="">
+            <img src="./Images/brand2.png" alt="">
+            <img src="./Images/brand3.png" alt="">
+            <img src="./Images/brand4.png" alt="">
+        </div>
+    </section>
 </body>
 </html> 
