added testimonial section

--- a/index.html
+++ b/index.html
@@ -77,5 +77,28 @@
             <img src="./Images/brand4.png" alt="">
         </div>
     </section>
+
+    <!-- Testimonial -->
+    <section class="testimonial">
+        <h2 class="heading">What our client says</h2>
+        <div class="container">
+            <div class="contentBox">
+                <div>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque deleniti, harum maxime aliquam voluptatum provident earum, delectus fuga quisquam numquam vitae suscipit eligendi! Dolor vero illum cupiditate cum, error ad magnam quos sapiente deleniti mollitia suscipit nobis.
+                    </p><br>
+                    <h3>someone famous</h3>
+                </div>
+            </div>
+            <div class="contentBox">
+                <div>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque deleniti, harum maxime aliquam voluptatum provident earum, delectus fuga quisquam numquam vitae suscipit eligendi! Dolor vero illum cupiditate cum, error ad magnam quos sapiente deleniti mollitia suscipit nobis.
+                    </p><br>
+                    <h3>someone famous</h3>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html> 
