added contact section

--- a/index.html
+++ b/index.html
@@ -100,5 +100,28 @@
             </div>
         </div>
     </section>
+
+    <!-- Contact -->
+    <section class="contact">
+        <div class="content">
+            <h2 class="heading">Contact Us</h2>
+            <p class="text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci doloremque consequatur dolores officiis aliquam alias laboriosam minus corrupti! Dolor aut autem eveniet pariatur iure accusantium? Ipsa neque sapiente debitis asperiores nesciunt eius iste deleniti. Pariatur cupiditate dolorem vero perspiciatis itaque voluptate, a voluptates distinctio eos, quod doloribus quis ullam commodi.
+            </p>
+        </div>
+
+        <div class="user_space">
+            <div class="contentBx redbg">
+                <div class="form">
+                    <div class="inputBx"><input type="text" name="name" placeholder="Name"></div>
+                    <div class="inputBx"><input type="text" name="email" placeholder="Email Address"></div>
+                    <div class="inputBx"><input type="text" name="Mobile_No" placeholder="Mobile Number"></div>
+                    <div class="inputBx"><textarea type="text" placeholder="Write Your message here"></textarea></div>
+                    <div class="inputBx"><input type="submit" value="submit"></div>
+                </div>
+            </div>
+            <div class="imgBx2"></div>
+        </div>
+    </section>
 </body>
 </html> 
