added footer section

--- a/index.html
+++ b/index.html
@@ -123,5 +123,17 @@
             <div class="imgBx2"></div>
         </div>
     </section>
+
+    <!-- Footer -->
+    <footer>
+        <p class="text">Design and Developed by Krishna Rathi</p>
+        
+        <ul>
+            <p class="text">Follow me on:</p>
+            <li><a href="#"><img src="/Images/facebook.png" alt=""></a></li>
+            <li><a href="#"><img src="/Images/twitter.png" alt=""></a></li>
+            <li><a href="#"><img src="/Images/linkedin.png" alt=""></a></li>
+        </ul>
+    </footer>
 </body>
 </html> 
